modified displayAdverts, created createAdvert