@@ -1,18 +1,26 @@
 package BookExchange.BookCrosser.adverts;
 
+import BookExchange.BookCrosser.general.UnauthorizedAccessException;
 import BookExchange.BookCrosser.persons.Person;
+import BookExchange.BookCrosser.persons.PersonRepository;
+import jakarta.persistence.EntityNotFoundException;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
+import java.util.Date;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class AdvertService {
     private final AdvertRepository advertRepository;
+    private final PersonRepository personRepository;
 
-    public AdvertService(AdvertRepository advertRepository) {
+    public AdvertService(AdvertRepository advertRepository, PersonRepository personRepository) {
         this.advertRepository = advertRepository;
+        this.personRepository = personRepository;
     }
     public ViewAdvertDTO convertToViewAdvertDTO(Advert advert){
         ViewAdvertDTO dto = new ViewAdvertDTO();
@@ -29,12 +37,9 @@ public class AdvertService {
         dto.setPhoneNumber(person.getPhoneNumber());
         return dto;
     }
-    public Optional<Advert> findById(Long id){
-        return advertRepository.findById(id);
-    }
-    private DisplayAdvertDTO convertToDisplayAdvertDTO(Advert advert){
-        DisplayAdvertDTO dto = new DisplayAdvertDTO();
-        dto.setId(advert.getId());
+
+    private AdvertDTO convertToAdvertDTO(Advert advert){
+        AdvertDTO dto = new AdvertDTO();
         dto.setDate(advert.getDate());
         dto.setTag(advert.getTag());
         dto.setTitle(advert.getTitle());
@@ -44,15 +49,50 @@ public class AdvertService {
         dto.setAdvertImage(advert.getAdvertImage());
         return dto;
     }
-    public List<DisplayAdvertDTO> getDisplayAdvertDTO(String title, String author, String genre, TAG_TYPE tag){
+    public List<AdvertDTO> displayAdverts(FiltersDTO filtersDTO){
+        String title = filtersDTO.getTitle().isEmpty() ? null : filtersDTO.getTitle();
+        String author = filtersDTO.getAuthor().isEmpty() ? null : filtersDTO.getAuthor();
+        String genre = filtersDTO.getGenre().isEmpty() ? null : filtersDTO.getGenre();
+        TAG_TYPE tag = (filtersDTO.getTag() != null ? filtersDTO.getTag() : null);
+        int pageNum = filtersDTO.getPageNum();
         List<Advert> recentAdverts = advertRepository.findAdvertsBySearchCriteria(title,author,genre,tag);
-        return recentAdverts.stream()
-                .map(this::convertToDisplayAdvertDTO)
-                .collect(Collectors.toList());
+        List<AdvertDTO>  displayAdvertDTOList = recentAdverts.stream()
+                .map(this::convertToAdvertDTO)
+                .toList();
+        // number 10 stands for adverts per page. It is a fixed value for now
+        int startIndex = (pageNum * 10) - 10;
+        int endIndex = Math.min(startIndex + 10, displayAdvertDTOList.size());
+        if(startIndex >= recentAdverts.size()){
+            return Collections.emptyList();
+        }
+        return displayAdvertDTOList.subList(startIndex,endIndex);
     }
-    public List<Advert> findAdvertsBySearchCriteria(String title, String author, String genre, TAG_TYPE tag){
-       return advertRepository.findAdvertsBySearchCriteria(title, author, genre, tag);
+    public Optional<Advert> findAdvertById(Long id){
+        return advertRepository.findById(id);
+    }
+    public void createAdvert(AdvertDTO advertDTO){
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication != null) {
+            String firebaseId = authentication.getName();
+            Optional<Person> optionalPerson = personRepository.findByFirebaseId(firebaseId);
+            if (optionalPerson.isPresent()) {
+                Person person = optionalPerson.get();
+                Advert advert = new Advert();
+                advert.setDate(new Date());
+                advert.setTitle(advertDTO.getTitle());
+                advert.setAuthor(advertDTO.getAuthor());
+                advert.setGenre(advertDTO.getGenre());
+                advert.setDescription(advertDTO.getDescription());
+                advert.setAdvertImage(advertDTO.getAdvertImage());
+                advert.setPerson(person);
+                advertRepository.save(advert);
+            } else {
+                throw new EntityNotFoundException("User not found");
+            }
+        } else {
+            throw new UnauthorizedAccessException("User not authenticated");
+        }
+    }
 
-    }
 
 }
